# udp-client

./: .gitignore  CMakeLists.txt  README.md  UdbSvc.h  udp-client.cpp  udp-client.sln  udp-client.vcxproj  udp-client.vcxproj.filters
udp-client-test/: CMakeLists.txt  UdpSvc.cpp  udp-client-test.cpp  udp-client-test.vcxproj  udp-client-test.vcxproj.filters
